atualizacao v0.8
